--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -24,8 +24,7 @@
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
-    "options(repr.matrix.max.rows = 6)\n",
-    "\n"
+    "options(repr.matrix.max.rows = 6)"
    ]
   },
   {
@@ -157,11 +156,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Methods:\n",
+    "We will use the columns \"Current Rank\", \"Best Rank\", \"Height\", \"Seasons\", \"Best Elo Rank\", \"Peak Elo Rating\", and \"Titles\" to predict a player's prize money. \n",
+    "To conduct our analysis, we will first filter our data to remove any empty cells in our columns of interest.\n",
+    "We will then separate the data into the training and testing portions.\n",
+    "Then we will create a recipe and use k nearest neighbor\n",
+    "We will visualize results by creating a plot of prize money against each of these variables seperately."
+   ]
   }
  ],
  "metadata": {
