--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +166,22 @@
     "Then we will create a recipe and use k nearest neighbors to predict a player's prize money. \n",
     "We will visualize results by creating a plot of prize money against each of these variables seperately."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expected outcomes:\n",
+    "We expect to see that higher ranked players will be making more prize money, as well as players that have been playing for more seasons. \n",
+    "We are unsure how height will be related to prize money, but this could be an interesting relationship to explore, and could lead to other questions about factors like weight or muscle mass affecting prize money. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
